--- a/testo-metric/src/main/resources/application.properties
+++ b/testo-metric/src/main/resources/application.properties
@@ -8,3 +8,12 @@ server.port=8099
 kafka.consumer.bootstrap=localhost:9092
 kafka.consumer.group=WorkUnitApp
 kafka.consumer.topic=workunits
+
+jdbc.A.url=jdbc:mysql://localhost:3306/testo_a?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.A.username=cyborg
+jdbc.A.password=c7b8rg
+
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=false
